@@ -5,6 +5,7 @@ Release 1.3
 #27 Upgrade to official Cayenne 4.0.M2
 #28 Refactor TaskBuilder to be able to split it into specialized builders 
 #30 Execution refactoring: split stats in a separate class
+#31 Execution: support for a map of arbitrary 'attributes'
 
 Release 1.2 2014-12-08
 
